--- a/src/html/pages/our-projects/our-projects.css
+++ b/src/html/pages/our-projects/our-projects.css
@@ -1,9 +1,15 @@
-.logo{
-    padding-top: 0;
-    padding-left: 1em;
-    padding-right: 1em;
-    padding-bottom: 0;
-    background-image: url('/img/noun_Charity_3028505.png');
-    background-position: left;
-    background-size: contain;
+@media (min-width: 576px) and (max-width: 767.98px) {
+
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+
+}
+
+@media (min-width: 1200px) {
+
 }
