--- a/src/html/pages/about-us/about-us.css
+++ b/src/html/pages/about-us/about-us.css
@@ -1,30 +1,5 @@
-.footer {
-    position: relative;
-    height: 100%;
-    padding-bottom: 25px;
-    background-color: #f5f5f5;
-    color: gainsboro;
-}
-
-.flex-item {
-    padding: 5px;
-}
-
-.flex-item > h2 {
-    padding-top: 10px;
-}
-
-.non-profit {
-    padding-top: 20px;
-}
-
-.oval {
-    padding-top: 10px;
-    margin: auto;
-    width: 30px;
-    height: 10px;
-    background: gainsboro;
-    border-radius: 40px;
+h1 {
+    font-size: 60px;
 }
 
 .donate-btn {
@@ -40,7 +15,7 @@
 }
 
 .donate-btn:before {
-    content: 'Hello';
+    content: '';
     background: linear-gradient(45deg, blue, lightcoral, blue, lightgray, blue, grey, blue, lightpink, lightcoral);
     position: absolute;
     top: -2px;
@@ -84,26 +59,135 @@ img {
     padding: 20px;
 }
 
+.footer {
+    position: relative;
+    height: 100%;
+    padding-bottom: 25px;
+    background-color: #f5f5f5;
+    color: gainsboro;
+}
+
+.oval {
+    padding-top: 10px;
+    margin: auto;
+    width: 30px;
+    height: 10px;
+    background: gainsboro;
+    border-radius: 40px;
+}
+
+.flex-item {
+    padding: 5px;
+}
+
+.flex-item > h2 {
+    padding-top: 10px;
+}
+
+.non-profit {
+    padding-top: 20px;
+}
+
 @media only screen and (max-width: 600px) {
 
 }
 
 
 @media only screen and (min-width: 600px) {
+    h1 {
+        font-size: 70px;
+    }
 
+    p{
+        font-size: 15px;
+        padding-left: 150px;
+        padding-right: 150px;
+    }
+
+    .first {
+        height: 520px;
+        width: auto;
+        padding: 20px;
+    }
+
+    .second {
+        height: 280px;
+        width: auto;
+        padding: 20px;
+    }
 }
 
 
 @media only screen and (min-width: 768px) {
+    h1 {
+        font-size: 70px;
+    }
 
+    p{
+        font-size: 15px;
+        padding-left: 250px;
+        padding-right: 250px;
+    }
+
+    .first {
+        height: 600px;
+        width: auto;
+        padding: 20px;
+    }
+
+    .second {
+        height: 315px;
+        width: auto;
+        padding: 20px;
+    }
 }
 
 
 @media only screen and (min-width: 992px) {
+    h1 {
+        font-size: 90px;
+    }
 
+    p{
+        font-size: 20px;
+        padding-left: 350px;
+        padding-right: 350px;
+    }
+
+    .first {
+        height: 680px;
+        width: auto;
+        padding: 20px;
+    }
+
+    .second {
+        height: 350px;
+        width: auto;
+        padding: 20px;
+    }
 }
 
 
 @media only screen and (min-width: 1200px) {
+    h1 {
+        font-size: 100px;
+    }
 
+    p{
+        font-size: 25px;
+        padding-left: 400px;
+        padding-right: 400px;
+    }
+
+    .first {
+        height: 780px;
+        width: auto;
+        padding: 20px;
+    }
+
+    .second {
+        height: 400px;
+        width: auto;
+        padding: 20px;
+    }
 }
