--- a/src/html/pages/donate/donate.css
+++ b/src/html/pages/donate/donate.css
@@ -1,9 +1,42 @@
+h1 {
+    font-size: 50px;
+}
+
+h2 {
+    font-size: 40px;
+}
+
+h3 {
+    font-size: 20px;
+}
+
+#social {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#social img {
+    display: block;
+    width: 100%;
+    height: auto;
+    padding: 20px;
+}
+
 .footer {
     position: relative;
     height: 100%;
     padding-bottom: 25px;
     background-color: #f5f5f5;
     color: gainsboro;
+}
+
+.oval {
+    padding-top: 10px;
+    margin: auto;
+    width: 30px;
+    height: 10px;
+    background: gainsboro;
+    border-radius: 40px;
 }
 
 .flex-item {
@@ -18,35 +51,116 @@
     padding-top: 20px;
 }
 
-.oval {
-    padding-top: 10px;
-    margin: auto;
-    width: 30px;
-    height: 10px;
-    background: gainsboro;
-    border-radius: 40px;
-}
-
 @media only screen and (max-width: 600px) {
 
 }
 
 
 @media only screen and (min-width: 600px) {
+    h1 {
+        font-size: 80px;
+    }
 
+    h2 {
+        font-size: 50px;
+    }
+
+    h3 {
+        font-size: 25px;
+    }
+
+    #social img {
+        display: block;
+        width: 50%;
+        height: auto;
+        width: 100px;
+    }
+
+    img {
+        height: 600px;
+    }
+
+    .portal {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 
 @media only screen and (min-width: 768px) {
+    h1 {
+        font-size: 80px;
+    }
 
+    h2 {
+        font-size: 50px;
+    }
+
+    h3 {
+        font-size: 25px;
+    }
+
+    #social img {
+        display: block;
+        width: 50%;
+        height: auto;
+        width: 100px;
+    }
+
+    img {
+        height: 600px;
+    }
 }
 
 
 @media only screen and (min-width: 992px) {
+    h1 {
+        font-size: 100px;
+    }
 
+    h2 {
+        font-size: 60px;
+    }
+
+    h3 {
+        font-size: 30px;
+    }
+
+    #social img {
+        display: block;
+        width: 50%;
+        height: auto;
+        width: 120px;
+    }
+
+    img {
+        height: 600px;
+    }
 }
 
 
 @media only screen and (min-width: 1200px) {
+    h1 {
+        font-size: 100px;
+    }
+
+    h2 {
+        font-size: 60px;
+    }
+
+    h3 {
+        font-size: 30px;
+    }
+
+    #social img {
+        display: block;
+        width: 50%;
+        height: auto;
+        width: 120px;
+    }
+
+    img {
+        height: 600px;
+    }
 
 }
