--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,18 @@
         background-repeat: no-repeat;
     }
 
+    #mission {
+        padding: 30px;
+        padding-left: 200px;
+        padding-right: 200px;
+        padding-bottom: 100px;
+        font-size: 20px;
+    }
+
+    #title {
+        padding-top: 40px;
+        font-size: 40px;
+    }
 }
 
 
@@ -73,6 +85,18 @@
         background-repeat: no-repeat;
     }
 
+    #mission {
+        padding: 50px;
+        padding-left: 250px;
+        padding-right: 250px;
+        padding-bottom: 350px;
+        font-size: 25px;
+    }
+
+    #title {
+        padding-top: 60px;
+        font-size: 50px;
+    }
 }
 
 
@@ -88,14 +112,14 @@
 
     #mission {
         padding: 50px;
-        padding-left: 150px;
-        padding-right: 150px;
-        padding-bottom: 350px;
+        padding-left: 300px;
+        padding-right: 300px;
+        padding-bottom: 300px;
         font-size: 30px;
     }
 
     #title {
-        padding-top: 100px;
+        padding-top: 30px;
         font-size: 60px;
     }
 }
@@ -113,14 +137,16 @@
 
     #mission {
         padding: 50px;
-        padding-left: 400px;
-        padding-right: 400px;
-        padding-bottom: 550px;
+        padding-left: 515px;
+        padding-right: 515px;
+        padding-bottom: 490px;
         font-size: 30px;
     }
 
     #title {
-        padding-top: 100px;
+        padding-top: 80px;
+        padding-right: 350px;
+        padding-left: 350px;
         font-size: 70px;
     }
 }
