--- a/src/html/pages/donate/donate.css
+++ b/src/html/pages/donate/donate.css
@@ -59,10 +59,72 @@ h3 {
     height: 500px;
     width: 300px;
     margin: auto;
+    /* display: none; */
 }
 
 .kids-img {
-    height: 300px;
+    height: 280px;
+}
+
+#image-flex {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* code inspired from https://codepen.io/gin85cc/pen/jrOgRq */
+.back, .next {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border: 0.4em solid #333;
+    border-radius: 50%;
+    opacity: 0.7;
+    margin: 1em;
+    /* flex-shrink: 0.5; */
+}
+
+.back:after {
+    content: '';
+    display: inline-block;
+    margin-top: 0.5em;
+    margin-left: 0.3em;
+    width: 1em;
+    height: 1em;
+    border-top: 0.4em solid #333;
+    border-right: 0.4em solid #333;
+    -moz-transofrm: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+    transform: rotate(-135deg);
+}
+
+.next:after {
+    content: '';
+    display: inline-block;
+    margin-top: 0.5em;
+    margin-left: 0em;
+    width: 1em;
+    height: 1em;
+    border-top: 0.4em solid #333;
+    border-right: 0.4em solid #333;
+    -moz-transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
+
+.arrow:hover {
+    border-color: rgb(179, 179, 179);
+}
+
+.story {
+    height: 500px;
+    width: 300px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    display: none;
 }
 
 @media only screen and (max-width: 600px) {
@@ -101,6 +163,15 @@ h3 {
     .kids-img {
         height: 350px;
     }
+
+    .story {
+        width: 400px;
+        height: 550px;
+    }
+
+    .story button {
+        width: 50%;
+    }
 }
 
 
@@ -135,6 +206,15 @@ h3 {
     .kids-img {
         height: 400px;
     }
+
+    .story {
+        height: 600px;
+        width: 400px;
+    }
+
+    .story button {
+        width: 30%;
+    }
 }
 
 
@@ -168,6 +248,10 @@ h3 {
     }
     .kids-img {
         height: 500px;
+    }
+    .story {
+        height: 820px;
+        width: 500px;
     }
 }
 
