--- a/src/html/pages/about-us/about-us.css
+++ b/src/html/pages/about-us/about-us.css
@@ -1,92 +1,10 @@
-h1 {
-    font-size: 60px;
-}
-
-.donate-btn {
-    width: 220px;
-    height: 50px;
-    border: none;
-    outline: none;
-    color: #fff;
-    background: #111;
-    cursor: pointer;
-    position: relative;
-    border-radius: 10px;
-}
-
-.donate-btn:before {
-    content: '';
-    background: linear-gradient(45deg, blue, lightcoral, blue, lightgray, blue, grey, blue, lightpink, lightcoral);
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(7px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
-}
-
-.donate-btn:active {
-    color: lightslategray;
-    background-color: #2c292f;
-}
-
-.donate-btn:after {
-    z-index: -1;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #111;
-    left: 0;
-    top: 0;
-    border-radius: 10px;
-}
-
-@keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
-}
 
 img {
     width: 100%;
-    height: auto;
     padding: 20px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-.footer {
-    position: relative;
-    height: 100%;
-    padding-bottom: 25px;
-    background-color: #f5f5f5;
-    color: gainsboro;
-}
-
-.oval {
-    padding-top: 10px;
-    margin: auto;
-    width: 30px;
-    height: 10px;
-    background: gainsboro;
-    border-radius: 40px;
-}
-
-.flex-item {
-    padding: 5px;
-}
-
-.flex-item > h2 {
-    padding-top: 10px;
-}
-
-.non-profit {
-    padding-top: 20px;
-}
 
 @media only screen and (max-width: 600px) {
 
@@ -94,22 +12,11 @@ img {
 
 
 @media only screen and (min-width: 600px) {
-    h1 {
-        font-size: 70px;
-    }
-
-    p{
-        font-size: 15px;
-        padding-left: 150px;
-        padding-right: 150px;
-    }
-
     .first {
         height: 520px;
         width: auto;
         padding: 20px;
     }
-
     .second {
         height: 280px;
         width: auto;
@@ -119,22 +26,11 @@ img {
 
 
 @media only screen and (min-width: 768px) {
-    h1 {
-        font-size: 70px;
-    }
-
-    p{
-        font-size: 15px;
-        padding-left: 250px;
-        padding-right: 250px;
-    }
-
     .first {
         height: 600px;
         width: auto;
         padding: 20px;
     }
-
     .second {
         height: 315px;
         width: auto;
@@ -144,22 +40,11 @@ img {
 
 
 @media only screen and (min-width: 992px) {
-    h1 {
-        font-size: 90px;
-    }
-
-    p{
-        font-size: 20px;
-        padding-left: 350px;
-        padding-right: 350px;
-    }
-
     .first {
         height: 680px;
         width: auto;
         padding: 20px;
     }
-
     .second {
         height: 350px;
         width: auto;
@@ -169,22 +54,11 @@ img {
 
 
 @media only screen and (min-width: 1200px) {
-    h1 {
-        font-size: 100px;
-    }
-
-    p{
-        font-size: 25px;
-        padding-left: 400px;
-        padding-right: 400px;
-    }
-
     .first {
         height: 780px;
         width: auto;
         padding: 20px;
     }
-
     .second {
         height: 400px;
         width: auto;
