--- a/src/html/pages/contact-us/contact-us.css
+++ b/src/html/pages/contact-us/contact-us.css
@@ -1,5 +1,5 @@
-h1 {
-    font-size: 50px;
+img {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 p {
@@ -16,101 +16,12 @@ p {
     padding: 40px;
 }
 
-.donate-btn {
-    width: 220px;
-    height: 50px;
-    border: none;
-    outline: none;
-    color: #fff;
-    background: #111;
-    cursor: pointer;
-    position: relative;
-    border-radius: 10px;
-}
-
-.donate-btn:before {
-    content: '';
-    background: linear-gradient(45deg, blue, lightcoral, blue, lightgray, blue, grey, blue, lightpink, lightcoral);
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(7px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
-}
-
-.donate-btn:active {
-    color: lightslategray;
-    background-color: #2c292f;
-}
-
-.donate-btn:after {
-    z-index: -1;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #111;
-    left: 0;
-    top: 0;
-    border-radius: 10px;
-}
-
-@keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
-}
-
-.footer {
-    position: relative;
-    height: 100%;
-    padding-bottom: 25px;
-    background-color: #f5f5f5;
-    color: gainsboro;
-}
-
-.oval {
-    padding-top: 10px;
-    margin: auto;
-    width: 30px;
-    height: 10px;
-    background: gainsboro;
-    border-radius: 40px;
-}
-
-.flex-item {
-    padding: 5px;
-}
-
-.flex-item > h2 {
-    padding-top: 10px;
-}
-
-.non-profit {
-    padding-top: 20px;
-}
-
 @media only screen and (max-width: 600px) {
 
 }
 
 
 @media only screen and (min-width: 600px) {
-    h1 {
-        font-size: 70px;
-    }
-
-    p {
-        padding-left: 100px;
-        padding-right: 100px;
-    }
-
     .contact-info {
         padding-left: 30px;
         padding-right: 30px;
@@ -118,84 +29,41 @@ p {
 
     .donate-div {
         padding: 40px;
-    }
-
-    img {
-        height: 300px;
     }
 }
 
 
 @media only screen and (min-width: 768px) {
-    h1 {
-        font-size: 90px;
-    }
-
-    p {
-        padding-left: 200px;
-        padding-right: 200px;
-    }
-
     .contact-info {
         padding-left: 30px;
         padding-right: 30px;
     }
-
     .donate-div {
         padding: 40px;
-    }
-
-    img {
-        height: 400px;
     }
 }
 
 
 @media only screen and (min-width: 992px) {
-    h1 {
-        font-size: 100px;
-    }
-
-    p {
-        padding-left: 400px;
-        padding-right: 400px;
-    }
-
     .contact-info {
         padding-left: 30px;
         padding-right: 30px;
     }
-
     .donate-div {
         padding: 40px;
-    }
-
-    img {
-        height: 400px;
     }
 }
 
 
 @media only screen and (min-width: 1200px) {
-    h1 {
-        font-size: 100px;
+    h2 {
+        padding-top: 30px;
     }
-
-    p {
-        padding-left: 400px;
-        padding-right: 400px;
-    }
-
     .contact-info {
         padding-left: 30px;
         padding-right: 30px;
     }
-
     .donate-div {
         padding: 40px;
-    }
-
-    img {
-        height: 600px;
     }
 }
