--- a/src/html/pages/donate/donate.css
+++ b/src/html/pages/donate/donate.css
@@ -1,77 +1,35 @@
-h1 {
-    font-size: 50px;
+/*Donate Section*/
+#donate > img {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.portal {
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-h2 {
-    font-size: 40px;
-}
-
-h3 {
-    font-size: 20px;
-}
-
-#social {
-    margin-left: auto;
-    margin-right: auto;
-}
-
-#social img {
-    display: block;
-    width: 50%;
-    height: auto;
-    width: 100px;
-}
-
-.footer {
-    position: relative;
-    height: 100%;
-    padding-bottom: 25px;
-    background-color: #f5f5f5;
-    color: gainsboro;
-}
-
-.oval {
-    padding-top: 10px;
-    margin: auto;
-    width: 30px;
-    height: 10px;
-    background: gainsboro;
-    border-radius: 40px;
-}
-
-.flex-item {
-    padding: 5px;
-}
-
-.flex-item > h2 {
-    padding-top: 10px;
-}
-
-.non-profit {
-    padding-top: 20px;
-}
-
-.kids-p {
-    height: 75px;
-}
-
-#kids-stories {
-    height: 500px;
-    width: 300px;
-    margin: auto;
-    /* display: none; */
-}
-
-.kids-img {
-    height: 280px;
-}
-
+/*Kids Stories Section*/
 #image-flex {
     display: flex;
     justify-content: center;
     align-items: center;
 }
+#kids-stories {
+    height: 485px;
+    width: 300px;
+    margin: auto;
+    background-color: lightgrey;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
 
+#kids-stories > div > img {
+    width: auto;
+    height: 250px;
+}
+.kids-p {
+    padding-right: 5px;
+    padding-left: 5px;
+    height: 75px;
+}
 /* code inspired from https://codepen.io/gin85cc/pen/jrOgRq */
 .back, .next {
     display: inline-block;
@@ -80,15 +38,14 @@ h3 {
     border: 0.4em solid #333;
     border-radius: 50%;
     opacity: 0.7;
-    margin: 1em;
-    /* flex-shrink: 0.5; */
+    margin: auto;
 }
 
 .back:after {
     content: '';
     display: inline-block;
     margin-top: 0.5em;
-    margin-left: 0.3em;
+    margin-left: 0.2em;
     width: 1em;
     height: 1em;
     border-top: 0.4em solid #333;
@@ -97,12 +54,11 @@ h3 {
     -webkit-transform: rotate(-135deg);
     transform: rotate(-135deg);
 }
-
 .next:after {
     content: '';
     display: inline-block;
     margin-top: 0.5em;
-    margin-left: 0em;
+    margin-left: -0.2em;
     width: 1em;
     height: 1em;
     border-top: 0.4em solid #333;
@@ -111,183 +67,158 @@ h3 {
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
 }
-
 .arrow:hover {
     border-color: rgb(179, 179, 179);
 }
-
 .story {
-    height: 500px;
+    height: 485px;
     width: 300px;
     margin: auto;
-    display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
     display: none;
+    background-color: lightgrey;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.story > p {
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+/*Social Media*/
+#social {
+    margin-left: auto;
+    margin-right: auto;
+}
+#social img {
+    display: block;
+    height: auto;
+    width: 100px;
 }
 
 @media only screen and (max-width: 600px) {
 
 }
 
-
 @media only screen and (min-width: 600px) {
-    h1 {
-        font-size: 80px;
-    }
-    h2 {
-        font-size: 50px;
-    }
-    h3 {
-        font-size: 25px;
-    }
-    #social img {
-        display: block;
-        width: 50%;
-        height: auto;
-        width: 100px;
-    }
-    img {
-        height: 600px;
-    }
     .portal {
         padding-left: 20px;
         padding-right: 20px;
     }
     #kids-stories {
-        height: 550px;
+        height: 647px;
         width: 400px;
-        margin: auto;
     }
-    .kids-img {
+    #kids-stories > div > img {
+        width: auto;
+        height: 380px;
+    }
+    #kids-stories > div > img {
+        width: auto;
         height: 350px;
     }
-
-    .story {
-        width: 400px;
-        height: 550px;
+    #kids-stories > p {
+        padding-left: 40px;
+        padding-right: 40px;
     }
-
+    .story {
+        width: 647px;
+        height: 400px;
+    }
     .story button {
         width: 50%;
+    }
+    .story > p {
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
 
 
 @media only screen and (min-width: 768px) {
-    h1 {
-        font-size: 80px;
-    }
-    h2 {
-        font-size: 50px;
-    }
-    h3 {
-        font-size: 25px;
-    }
-    #social img {
-        display: block;
-        width: 50%;
-        height: auto;
-        width: 100px;
-    }
     #kids-stories {
-        width: 500px;
-        margin: auto;
-    }
-    .kids-img {
-        height: 700px;
-    }
-    #kids-stories {
-        height: 600px;
+        height: 647px;
         width: 400px;
-        margin: auto;
     }
-    .kids-img {
-        height: 400px;
+    #kids-stories > h3 {
+        padding-top: 25px;
     }
-
+    #kids-stories > div > img {
+        width: auto;
+        height: 380px;
+    }
+    #kids-stories > p {
+        padding-right: 45px;
+        padding-left: 45px;
+    }
     .story {
-        height: 600px;
+        height: 647px;
         width: 400px;
     }
-
     .story button {
         width: 30%;
+    }
+    .story > p {
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
 
 
 @media only screen and (min-width: 992px) {
-    h1 {
-        font-size: 100px;
-    }
-    h2 {
-        font-size: 60px;
-    }
-    h3 {
-        font-size: 30px;
-    }
-    #social img {
-        display: block;
-        width: 50%;
-        height: auto;
-        width: 120px;
+    #see-impact {
+        padding-top: 40px;
+        padding-bottom: 10px;
     }
     #kids-stories {
+        height: 809px;
         width: 500px;
-        margin: auto;
     }
-    .kids-img {
-        height: 700px;
+    #kids-stories > h3 {
+        padding-top: 35px;
     }
-    #kids-stories {
-        height: 720px;
-        width: 500px;
-        margin: auto;
-    }
-    .kids-img {
+    #kids-stories > div > img {
+        width: auto;
         height: 500px;
     }
+    #kids-stories > p {
+        padding-right: 75px;
+        padding-left: 75px;
+    }
     .story {
-        height: 820px;
+        height: 809px;
         width: 500px;
+    }
+    .story > p {
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
 
 
 @media only screen and (min-width: 1200px) {
-    h1 {
-        font-size: 100px;
-    }
-    h2 {
-        font-size: 60px;
-    }
-    h3 {
-        font-size: 30px;
-    }
-    #social img {
-        display: block;
-        width: 50%;
-        height: auto;
-        width: 120px;
-    }
-    img {
-        height: 600px;
-    }
     #kids-stories {
+        height: 809px;
         width: 500px;
-        margin: auto;
     }
-    .kids-img {
-        height: 700px;
+    #kids-stories > h3 {
+        padding-top: 50px;
     }
-    #kids-stories {
-        height: 820px;
+    #kids-stories > div > img {
+        width: auto;
+        height: 480px;
+    }
+    #kids-stories > p {
+        padding-right: 60px;
+        padding-left: 60px;
+    }
+    .story  {
+        height: 809px;
         width: 500px;
-        margin: auto;
     }
-    .kids-img {
-        height: 600px;
+    .story > p {
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
