--- a/src/html/pages/our-projects/our-projects.css
+++ b/src/html/pages/our-projects/our-projects.css
@@ -1,106 +1,16 @@
-h1 {
-    font-size: 50px;
+/*Sections*/
+img {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-
-.parallax {
-    background-image: url("https://i.ibb.co/xMy4gD7/floating-islands-5646926-1920.jpg");
-    height: 100%;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+#project-info {
+    padding-left: 20px;
+    padding-right: 20px;
 }
-
 .impact-div {
     padding: 20px;
 }
-
 .donate-div {
     padding-bottom: 40px;
-}
-
-.donate-btn {
-    width: 220px;
-    height: 50px;
-    border: none;
-    outline: none;
-    color: #fff;
-    background: #111;
-    cursor: pointer;
-    position: relative;
-    border-radius: 10px;
-}
-
-.donate-btn:before {
-    content: '';
-    background: linear-gradient(45deg, blue, lightcoral, blue, lightgray, blue, grey, blue, lightpink, lightcoral);
-    position: absolute;
-    top: -2px;
-    left:-2px;
-    background-size: 400%;
-    z-index: -1;
-    filter: blur(7px);
-    width: calc(100% + 4px);
-    height: calc(100% + 4px);
-    animation: glowing 20s linear infinite;
-    transition: opacity .3s ease-in-out;
-    border-radius: 10px;
-}
-
-.donate-btn:active {
-    color: lightslategray;
-    background-color: #2c292f;
-}
-
-.donate-btn:after {
-    z-index: -1;
-    content: '';
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #111;
-    left: 0;
-    top: 0;
-    border-radius: 10px;
-}
-
-@keyframes glowing {
-    0% { background-position: 0 0; }
-    50% { background-position: 400% 0; }
-    100% { background-position: 0 0; }
-}
-
-.footer {
-    position: relative;
-    height: 100%;
-    padding-bottom: 25px;
-    background-color: #f5f5f5;
-    color: gainsboro;
-}
-
-.oval {
-    padding-top: 10px;
-    margin: auto;
-    width: 30px;
-    height: 10px;
-    background: gainsboro;
-    border-radius: 40px;
-}
-
-.footer > img {
-    position: center;
-}
-
-.flex-item {
-    padding: 5px;
-}
-
-.flex-item > h2 {
-    padding-top: 10px;
-}
-
-.non-profit {
-    padding-top: 20px;
 }
 
 @media only screen and (max-width: 600px) {
@@ -109,89 +19,20 @@ h1 {
 
 
 @media only screen and (min-width: 600px) {
-    h1 {
-        font-size: 60px;
-    }
 
-    h2 {
-        font-size: 40px;
-    }
-
-    p {
-        padding-right: 20px;
-        padding-left: 20px;
-    }
-
-    img{
-        width: 70%;
-        height: auto;
-    }
-
-    .parallax {
-        height: 340px;
-        width: 100%;
-    }
 }
 
 
 @media only screen and (min-width: 768px) {
-    h1 {
-        font-size: 60px;
-    }
 
-    h2 {
-        font-size: 40px;
-    }
-
-    img{
-        width: 45%;
-        height: auto;
-    }
-
-    .parallax {
-        height: 340px;
-        width: 100%;
-    }
 }
 
 
 @media only screen and (min-width: 992px) {
-    h1 {
-        font-size: 80px;
-    }
 
-    h2 {
-        font-size: 40px;
-    }
-
-    img{
-        width: 45%;
-        height: auto;
-    }
-
-    .parallax {
-        height: 300px;
-        width: 100%;
-    }
 }
 
 
 @media only screen and (min-width: 1200px) {
-    h1 {
-        font-size: 100px;
-    }
 
-    h2 {
-        font-size: 50px;
-    }
-
-    img{
-        width: 45%;
-        height: auto;
-    }
-
-    .parallax {
-        height: 300px;
-        width: 100%;
-    }
 }
