--- a/src/pages/about-us/about-us.css
+++ b/src/pages/about-us/about-us.css
@@ -1,13 +1,13 @@
-
 img {
     width: 100%;
     padding: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
-
 @media only screen and (max-width: 600px) {
-
+    h1 {
+        font-size: 60px;
+    }
 }
 
 
@@ -24,7 +24,6 @@ img {
     }
 }
 
-
 @media only screen and (min-width: 768px) {
     .first {
         height: 600px;
@@ -38,7 +37,6 @@ img {
     }
 }
 
-
 @media only screen and (min-width: 992px) {
     .first {
         height: 680px;
@@ -51,7 +49,6 @@ img {
         padding: 20px;
     }
 }
-
 
 @media only screen and (min-width: 1200px) {
     .first {
