--- a/src/pages/our-projects/our-projects.css
+++ b/src/pages/our-projects/our-projects.css
@@ -14,25 +14,31 @@ img {
 }
 
 @media only screen and (max-width: 600px) {
-
+    h1 {
+        font-size: 60px;
+    }
 }
-
 
 @media only screen and (min-width: 600px) {
-
+    h1 {
+        font-size: 80px;
+    }
 }
-
 
 @media only screen and (min-width: 768px) {
-
+    h1 {
+        font-size: 80px;
+    }
 }
-
 
 @media only screen and (min-width: 992px) {
-
+    h1 {
+        font-size: 100px;
+    }
 }
 
-
 @media only screen and (min-width: 1200px) {
-
+    h1 {
+        font-size: 100px;
+    }
 }
