--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -2,7 +2,7 @@
     position: relative;
     height: 100%;
     padding-bottom: 25px;
-    background-color: #f5f5f5;
+    background-color: #2c292f;
     color: gainsboro;
 }
 
