--- a/src/components/pages/donate/Donate.css
+++ b/src/components/pages/donate/Donate.css
@@ -1,3 +1,7 @@
+main {
+    text-align: center;
+}
+
 /*Donate Section*/
 #donate > img {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
