--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -6,7 +6,14 @@
     color: gainsboro;
 }
 
+.flex-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .flex-item {
+    min-width: 300px;
     padding: 5px;
 }
 
