--- a/src/components/pages/our-projects/OurProjects.css
+++ b/src/components/pages/our-projects/OurProjects.css
@@ -3,6 +3,12 @@
     padding-right: 10px;
 }
 
+.menu-button {
+    padding-left: 5px;
+    padding-right: 5px;
+    margin: 2px;
+}
+
 @media only screen and (max-width: 600px) {
 }
 
